Fixed Glitch on Mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,17 +20,17 @@ body {
 }
 
 .bgimg-1 {
-  background-image: url("http://www.guoguiyan.com/data/out/22/70295273-blank-wallpapers.png");
+  background-image: url("https://wallpaperscraft.com/image/pen_thought_muse_poetry_prose_44070_1920x1080.jpg");
   min-height: 100%;
 }
 
 .bgimg-2 {
-  background-image: url("http://www.guoguiyan.com/data/out/22/70295273-blank-wallpapers.png");
+  background-image: url("http://wallpapercave.com/wp/iVeBAGr.jpg");
   min-height: 90%;
 }
 
 .bgimg-3 {
-  background-image: url("http://www.guoguiyan.com/data/out/22/70295273-blank-wallpapers.png");
+  background-image: url("https://5wise.files.wordpress.com/2015/01/sunset-reflection-clouds-colours-forest-lake-nature-reflection-sky-snow-sunset-trees-winter.jpg");
   min-height: 80%;
 }
 
